fix(wip): change max-height to vh and add overflow (#544)

--- a/assets/css/_partial/_details.scss
+++ b/assets/css/_partial/_details.scss
@@ -29,7 +29,8 @@
     }
 
     .details-content {
-      max-height: $MAX_LENGTH;
+      max-height: 60vh;
+      overflow-y: auto;
       @include details-transition-close;
     }
   }
